--- a/app/src/main/res/layout/rowfile.xml
+++ b/app/src/main/res/layout/rowfile.xml
@@ -57,7 +57,7 @@
         android:layout_marginEnd="1dp"
         android:layout_marginRight="1dp"
         android:layout_marginBottom="12dp"
-        android:src="@drawable/ic_delete"></androidx.appcompat.widget.AppCompatImageView>
+       ></androidx.appcompat.widget.AppCompatImageView>
 </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
